--- a/ConsigSP/ConsigSP/ConsigSP.csproj
+++ b/ConsigSP/ConsigSP/ConsigSP.csproj
@@ -61,19 +61,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\BrWo\BrWo\BrWo.csproj">
-      <Project>{813AABF4-4B4B-494C-BF2F-DB7C683D9D55}</Project>
-      <Name>BrWo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DeathByCaptcha\DeathByCaptcha\DeathByCaptcha.csproj">
-      <Project>{2a3a4dd2-6700-4319-85fe-7fde7eacf925}</Project>
-      <Name>DeathByCaptcha</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Settings.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BrWo\BrWo\BrWo.csproj">
+      <Project>{813aabf4-4b4b-494c-bf2f-db7c683d9d55}</Project>
+      <Name>BrWo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\DeathByCaptcha\DeathByCaptcha\DeathByCaptcha.csproj">
+      <Project>{2a3a4dd2-6700-4319-85fe-7fde7eacf925}</Project>
+      <Name>DeathByCaptcha</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.77.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.77.0.0\build\Selenium.Chrome.WebDriver.targets')" />
